# lexi

./: Cargo.toml  LICENSE.txt  README.md
examples/: english-esperanto.html  esperanta-angla.html  esperanto-english.html  esperanto.html  lexicon.yaml  style.css
src/: format.rs  lexicon.rs  lib.rs  main.rs
src/templates/: dictionary.html.tmpl  dictionary.md.tmpl  foreign-native.html.tmpl  native-foreign.html.tmpl
templates/: index.html.tmpl
