[package]
description = "Renders a YAML lexicon file into dictionary files."
edition = "2021"
license = "MIT"
name = "lexi"
readme = "README.md"
repository = "https://github.com/jonathansharman/lexi"
version = "0.3.0"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
itertools = "0.12.1"
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
tera = { version = "1.19.1", default-features = false }
