[package]
description = "Renders a YAML lexicon file into dictionary files."
edition = "2024"
license = "MIT"
name = "lexi"
readme = "README.md"
repository = "https://github.com/jonathansharman/lexi"
version = "0.4.1"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
itertools = "0.12.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.22"
tera = { version = "1.20.1", default-features = false }
